--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -96,12 +96,18 @@ body {
   min-height: 100%;
   min-height: 100dvh;
   min-height: -webkit-fill-available;
+  height: 100dvh;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #root {
   min-height: 100%;
   min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 a {
